--- a/GameData/ROCapsules/PartConfigs/CST/CSTHS.cfg
+++ b/GameData/ROCapsules/PartConfigs/CST/CSTHS.cfg
@@ -7,7 +7,7 @@ PART
 	
 	MODEL
 	{
-		model = ROCapsules/Assests/CST/cstHeatShield/model
+		model = ROCapsules/Assets/CST/cstHeatShield/model
 	}
 	
 	scale = 1.0
@@ -15,15 +15,13 @@ PART
 	
 	node_stack_bottom = 0.0, -0.3 , 0.0, 0.0, -1.0, 0.0, 2
 	node_stack_top = 0.0, -0.041 , 0.0, 0.0, 1.0, 0.0, 2
-	CoPOffset = 0.0, 1.0, 0.0
-	CoLOffset = 0.0, -0.5, 0.0
 
 	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, decouple
-	sound_vent_large = decouple
+	
 	TechRequired = heavyAerodynamics
 	entryCost = 1800
 	cost = 900
-	category = Aero
+	category = Thermal
 	subcategory = 0
 	title = CST-100 Heat Shield
 	manufacturer = Boeing
@@ -47,6 +45,8 @@ PART
 	stagingIcon = DECOUPLER_HOR
 	bulkheadProfiles = size3
 	thermalMassModifier = 1.0
+	
+	tags = starliner, boeing, cst100, cst-100, 100
 
 	MODULE
 	{
