--- a/GameData/ROCapsules/PartConfigs/CST/CSTNDSPassive.cfg
+++ b/GameData/ROCapsules/PartConfigs/CST/CSTNDSPassive.cfg
@@ -11,7 +11,7 @@ PART
 	}
 	
 	scale = 1.0
-	rescaleFactor = 0.69
+	rescaleFactor = 0.62
 	
 	node_stack_top = 0.0, 0.336, 0.0, 0.0, 1.0, 0.0, 1
 	node_stack_bottom = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 1
@@ -38,6 +38,8 @@ PART
 	maxTemp = 473.15
 	skinMaxTemp = 473.15
 	bulkheadProfiles = size1, srf
+	
+	tags = starliner, boeing, cst100, cst-100, 100, nasa docking system, nds
 	
 	MODULE
 	{
