--- a/GameData/ROCapsules/PartConfigs/CST/CSTNoseCone.cfg
+++ b/GameData/ROCapsules/PartConfigs/CST/CSTNoseCone.cfg
@@ -44,6 +44,8 @@ PART
 	chilStageOffset = 1
 	bulkheadProfiles = size1
 	
+	tags = starliner, boeing, cst100, cst-100, 100
+	
 	MODULE
 	{
 		name = ModuleDecouple
