--- a/GameData/ROCapsules/PartConfigs/CST/CSTParachute.cfg
+++ b/GameData/ROCapsules/PartConfigs/CST/CSTParachute.cfg
@@ -44,6 +44,8 @@ PART
 	stageOffset = 1
 	childStageOffset = 1
 	
+	tags = starliner, boeing, cst100, cst-100, 100
+	
 	MODULE
 	{
 		name = ModuleParachute
