--- a/GameData/ROCapsules/PartConfigs/CST/CSTRS88.cfg
+++ b/GameData/ROCapsules/PartConfigs/CST/CSTRS88.cfg
@@ -10,7 +10,7 @@ PART
 		model = ROCapsules/Assets/CST/RS88/model
 	}
 	
-	rescaleFactor = 1.0
+	rescaleFactor = 1.24
 	scale = 1.0
 	
 	node_stack_top = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 1
@@ -49,10 +49,13 @@ PART
 	stagingIcon = LIQUID_ENGINE
 	bulkheadProfiles = size1
 	
+	tags = starliner, boeing, cst100, cst-100, 100, rs88, rs-88, 88
+	
 	engineType = RS88
 	engineTypeMult = 4
 	massOffset = 0
 	ignoreMass = False
+	
 	
 	MODULE
 	{
