--- a/GameData/ROCapsules/PartConfigs/CST/CSTSM.cfg
+++ b/GameData/ROCapsules/PartConfigs/CST/CSTSM.cfg
@@ -45,6 +45,8 @@ PART
 	heatConductivity = 0.75
 	thermalMassModifier = 5
 	radiatorHeadroom = 0.5
+	
+	tags = starliner, boeing, cst100, cst-100, 100
 
 	MODULE
 	{
@@ -59,6 +61,7 @@ PART
 		thrusterTransformName = RCS
 		thrusterPower = 0.44
 		resourceFlowMode = STAGE_PRIORITY_FLOW
+		
 		PROPELLANT
 		{
 			name = MMH
