--- a/GameData/ROCapsules/PartConfigs/CST/CSTCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/CST/CSTCM.cfg
@@ -25,6 +25,7 @@ PART
 	
 	scale = 1
 	rescaleFactor = 1.24
+	
 	node_stack_bottom = 0.0, -0.9 , 0.0, 0.0, -1.0, 0.0, 2
 	node_stack_top_1 = 0.0, 1.28, 0.0, 0.0, 1.0, 0.0, 1
 	node_stack_top_2 = 0.0, 0.78775, 0.0, 0.0, 1.0, 0.0, 1
@@ -55,6 +56,8 @@ PART
 	vesselType = Ship
 	CrewCapacity = 7
 	bulkheadProfiles = size3, size1
+	
+	tags = starliner, boeing, cst100, cst-100, 100
 	
 	INTERNAL
 	{
