--- a/GameData/ROCapsules/PartConfigs/CST/CSTNDSActive.cfg
+++ b/GameData/ROCapsules/PartConfigs/CST/CSTNDSActive.cfg
@@ -6,12 +6,12 @@ PART
 	RSSROConfig = True
 	
 	MODEL
-    {
-        model = ROCapsules/Assets/CST/nds/NDS3/ndsport3
-    }
+	{
+		model = ROCapsules/Assets/CST/nds/NDS3/ndsport3
+	}
 	
 	scale = 1.0
-	rescaleFactor = 0.69
+	rescaleFactor = 0.62
 	
 	node_stack_top = 0.0, 0.336, 0.0, 0.0, 1.0, 0.0, 1
 	node_stack_bottom = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 1
@@ -38,6 +38,8 @@ PART
 	maxTemp = 473.15
 	skinMaxTemp = 473.15
 	bulkheadProfiles = size1, srf
+	
+	tags = starliner, boeing, cst100, cst-100, 100, nasa docking system, nds
 	
 	MODULE
 	{
