--- a/GameData/ROCapsules/PartConfigs/CST/RP_Support_CST.cfg
+++ b/GameData/ROCapsules/PartConfigs/CST/RP_Support_CST.cfg
@@ -9,23 +9,22 @@
 		name = Hypergolic_LowerOrangeShock
 		transformName = thrustTransform
 		localRotation = 0,0,0
-		localPosition = 0,0,0.39
-		fixedScale = 1.56
+		localPosition = 0,0,0
+		fixedScale = 1.0
 		energy = 1
 		speed = 1
-		emissionMult = 0.75
 
-		flarePosition = 0,0,-0.39
-		flareScale = 0.39
+		flarePosition = 0,0,0.0
+		flareScale = 0.12
 		
-		plumePosition = 0,0,0.39
-		plumeScale = 1.95
+		plumePosition = 0,0,1.8
+		plumeScale = 0.9
 
-		fumePosition = 0,0,0.78
-		fumeScale = 2.34
+		fumePosition = 0,0,2.5
+		fumeScale = 1.0
 
 		blazePosition = 0,0,1.5
-		blazeScale = 1.95
+		blazeScale = 0.8
 
 	}
 	
