--- a/GameData/ROCapsules/PartConfigs/CST/CSTCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/CST/CSTCM.cfg
@@ -134,10 +134,10 @@ PART
 			ignoreForIsp = True
 		}
 
-		@atmosphereCurve
+		atmosphereCurve
 		{
-			@key,0 = 0 220
-			@key,1 = 1 82
+			key,0 = 0 220
+			key,1 = 1 82
 		}
 	}
 	
@@ -332,13 +332,6 @@ PART
 			amount = 0
 			maxAmount = 3580
 		}
-
-		TANK
-		{
-			name = LithiumHydroxide
-			amount = 5.18
-			maxAmount = 10.4
-		}
 	}
 
 	MODULE:NEEDS[TacLifeSupport]
@@ -362,26 +355,6 @@ PART
 		{
 			ResourceName = ElectricCharge
 			Ratio = 0.01
-		}
-
-		INPUT_RESOURCE
-		{
-			ResourceName = LithiumHydroxide
-			Ratio = 0.0000085683
-		}
-
-		OUTPUT_RESOURCE
-		{
-			ResourceName = WasteWater
-			Ratio = 0.0000046828
-			DumpExcess = True
-		}
-
-		OUTPUT_RESOURCE
-		{
-			ResourceName = Waste
-			Ratio = 0.0000257297
-			DumpExcess = False
 		}
 	}
 }
