--- a/GameData/ROCapsules/PartConfigs/CST/CSTSM.cfg
+++ b/GameData/ROCapsules/PartConfigs/CST/CSTSM.cfg
@@ -74,10 +74,10 @@ PART
 			ratio = 0.501
 		}
 
-		@atmosphereCurve
+		atmosphereCurve
 		{
-			@key,0 = 0 320
-			@key,1 = 1 110
+			key,0 = 0 320
+			key,1 = 1 110
 		}
 	}
 	
