--- a/GameData/ROCapsules/PartConfigs/CST/CSTNDSPassive.cfg
+++ b/GameData/ROCapsules/PartConfigs/CST/CSTNDSPassive.cfg
@@ -1,6 +1,6 @@
 PART
 {
-	name = ROC_CSTNDSPassive
+	name = ROC-CSTNDSPassive
 	module = Part
 	author = Hanson Ma, Colton Franke
 	RSSROConfig = True
