--- a/GameData/ROCapsules/PartConfigs/CST/CSTCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/CST/CSTCM.cfg
@@ -15,7 +15,7 @@ PART
 {
 	name = ROC-CSTCM
 	module = Part
-	author = Hanson Ma, Colton Franke, capkirk
+	author = Hanson Ma, Colton Franke, VoidCosmos, Drakenex, zer0Kerbal, capkirk
 	RSSROConfig = True
 	
 	MODEL
