--- a/GameData/ROCapsules/PartConfigs/CST/CSTNoseCone.cfg
+++ b/GameData/ROCapsules/PartConfigs/CST/CSTNoseCone.cfg
@@ -2,12 +2,12 @@ PART
 {
 	name = ROC-CSTNoseCone
 	module = Part
-	author = Hanson Ma, Colton Franke
+	author = Hanson Ma, Colton Franke, VoidCosmos, Drakenex, zer0Kerbal, capkirk
 	RSSROConfig = True
 	
 	MODEL
 	{
-		model = ROCapsules/Assets/CST/noseCone/model
+		model = ROCapsules/Assets/CST/noseCone/CST101_CAP
 	}
 	
 	scale = 1
