--- a/GameData/ROCapsules/PartConfigs/CST/CSTNDSPassive.cfg
+++ b/GameData/ROCapsules/PartConfigs/CST/CSTNDSPassive.cfg
@@ -2,7 +2,7 @@ PART
 {
 	name = ROC-CSTNDSPassive
 	module = Part
-	author = Hanson Ma, Colton Franke
+	author = Hanson Ma, Colton Franke, VoidCosmos, Drakenex, zer0Kerbal, capkirk
 	RSSROConfig = True
 	
 	MODEL
