Fix Gemini realchutes config
RO overrides our real-world deploy altitudes; re-apply them after

--- a/GameData/ROCapsules/PartConfigs/Gemini/GeminiParachute.cfg
+++ b/GameData/ROCapsules/PartConfigs/Gemini/GeminiParachute.cfg
@@ -147,3 +147,18 @@ PART
 		useEvent = False
 	}
 }
+
+
+@PART[ROC-GeminiParachute]:AFTER[zzzRealismOverhaul]
+{
+    // RO forces all RealChuteModules to minDeploy 5000, deploy 1000,
+    // Get back our historical numbers
+    @MODULE[RealChuteModule]
+    {
+        @PARACHUTE
+        {
+            @minDeployment = 3200
+            @deploymentAlt = 2740
+        }
+    }    
+}
