--- a/GameData/ROCapsules/PartConfigs/Gemini/GeminiParachuteDrogue.cfg
+++ b/GameData/ROCapsules/PartConfigs/Gemini/GeminiParachuteDrogue.cfg
@@ -150,5 +150,19 @@ PART
 		useStaging = True
 		useEvent = False
 	}
+}
 
+@PART[ROC-GeminiParachuteDrogue]:AFTER[zzzRealismOverhaul]
+{
+    // RO forces all RealChuteModules to minDeploy 5000, deploy 1000,
+    // which would make the drogue cut before it even deploys. Get back
+    // our historical numbers
+    @MODULE[RealChuteModule]
+    {
+        @PARACHUTE
+        {
+            @minDeployment = 15000
+            @deploymentAlt = 6400
+        }
+    }    
 }
