--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryAirbrake.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryAirbrake.cfg
@@ -1,6 +1,6 @@
 PART
 {
-	name = ROC-MercuryAirbrake
+	name = ROC-MercuryAirbrakeBDB
 	module = Part
 	author = CobaltWolf, capkirk
 	
@@ -21,7 +21,7 @@ PART
 		method = FIXED_JOINT
 	}
 
-	rescaleFactor = 1.0
+	rescaleFactor = 1.512
 	//node_stack_bottom = 0.0, -0.148621, 0.0, 0.0, -1.0, 0.0, 0
 	//node_stack_top = 0.0, 0.2688744, 0.0, 0.0, 1.0, 0.0, 0
 	node_attach = 0.0, -0.005, 0.0, 0, -1, 0
@@ -45,7 +45,7 @@ PART
 	bulkheadProfiles = size0
 	bodyLiftMultiplier = 0
 
-	tags = mercury hermes aero stablizer airbrake
+	tags = mercury aero stablizer airbrake
 
 
 	MODULE
