--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryCM.cfg
@@ -1,22 +1,29 @@
 PART
 {
-	name = ROC-MercuryCM
+	name = ROC-MercuryCMBDB
 	module = Part
 	author = CobaltWolf
-	
+
 	RSSROConfig = true
 	RP0conf = true
-	
+
 	MODEL
 	{
 		model = ROCapsules/Assets/BDB/Mercury/bluedog_Mercury_Capsule
 		rotation = 0, 180, 0
 	}
 
-	rescaleFactor = 1.0
+	MODEL
+	{
+		model = ROCapsules/Assets/BDB/Mercury/bluedog_Mercury_Heatshield
+		rotation = 0, 180, 0
+		position = 0, -0.5098, 0
+	}
+
+	rescaleFactor = 1.512
 	scale = 1
 	node_stack_top	  = 0.0,  0.49839, 0.0, 0.0, 1.0, 0.0, 1
-	node_stack_bottom = 0.0, -0.47261, 0.0, 0.0, -1.0, 0.0, 1
+	node_stack_bottom = 0.0, -0.59196, 0.0, 0.0, -1.0, 0.0, 1
 	CenterOfBuoyancy = 0.0, 0.0, -0.05
 	//CenterOfDisplacement = 0.0, -0.3, 0.0
 	buoyancy = 1.1
@@ -65,7 +72,7 @@ PART
 
 	fuelCrossFeed = true
 
-	tags = mercury crew pod 1.25 125
+	tags = mercury crew pod CM
 
 
 	EFFECTS
@@ -75,7 +82,7 @@ PART
 			AUDIO_MULTI
 			{
 				channel = Ship
-				transformName = RCSthruster
+				transformName = rcsTransform
 				clip = sound_rocket_mini
 				volume = 0.0 0.0
 				volume = 0.1 0.0
@@ -88,7 +95,7 @@ PART
 			MODEL_MULTI_PARTICLE
 			{
 				modelName = Squad/FX/Monoprop_small
-				transformName = RCSthruster
+				transformName = rcsTransform
 				emission = 0.0 0.0
 				emission = 0.1 0.0
 				emission = 1.0 1.0
@@ -96,7 +103,70 @@ PART
 				speed = 1.0 1.0
 				localRotation = -90, 0, 0
 			}
-		}
+		}		
+	}
+
+	MODULE:NEEDS[!DeadlyReentry]
+	{
+		name = ModuleAblator
+		ablativeResource = Ablator
+		outputResource = CharredAblator
+		outputMult = 0.75
+		useChar = True
+		charModuleName = HeatShieldCharAnim
+		charMin = 1
+		charMax = 1
+		lossExp = -6000
+		lossConst = 0.13
+		pyrolysisLossFactor = 6000
+		ablationTempThresh = 400
+		reentryConductivity = 0.01
+	}
+
+	MODULE:NEEDS[DeadlyReentry]
+	{
+		name = ModuleHeatShield
+		ablativeResource = Ablator
+		outputResource = CharredAblator
+		outputMult = 0.75
+		useChar = True
+		charModuleName = HeatShieldCharAnim
+		charMin = 0
+		charMax = 1
+		lossExp = -6000
+		lossConst = 0.13
+		pyrolysisLossFactor = 6000
+		ablationTempThresh = 400
+		reentryConductivity = 0.01
+		depletedMaxTemp = 1200
+	}
+
+	RESOURCE
+	{
+		name = Ablator
+		amount = 125
+		maxAmount = 125
+	}
+
+	RESOURCE
+	{
+		name = CharredAblator
+		amount = 0
+		maxAmount = 100
+		isTweakable = False
+	}
+
+	MODULE
+	{
+		name = ModuleAnimateGeneric
+		animationName = deploy
+		isOneShot = false
+		startEventGUIName = Deploy Landing Bag
+		endEventGUIName = Retract Landing Bag
+		actionGUIName = Toggle Landing Bag
+		allowAnimationWhileShielded = False
+		restrictedNode = bottom
+		disableAfterPlaying = true
 	}
 
 	MODULE
