--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryLES.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryLES.cfg
@@ -1,6 +1,6 @@
 PART
 {
-	name = ROC-MercuryLES
+	name = ROC-MercuryLESBDB
 	module = Part
 	author = CobaltWolf
 
@@ -12,7 +12,7 @@ PART
 		model = ROCapsules/Assets/BDB/Mercury/bluedog_Mercury_LES
 		rotation = 0, 180, 0
 	}
-	rescaleFactor = 1.0
+	rescaleFactor = 1.512
 	node_stack_bottom = 0.0, -0.6293343, 0.0, 0.0, -1.0, 0.0, 0
 	CoMOffset = 0, 1.4, 0
 	//CoPOffset = 0, -0.63, 0
@@ -24,7 +24,7 @@ PART
 	category = Utility
 	subcategory = 0
 	title = Mercury Launch Escape System
-	manufacturer = McDonnell Aircraft
+	manufacturer = Grand Central Rocket Company
 	description = This solid rocket tower is designed to wrench the command pod up and away from a malfunctioning rocket. Use only in case of emergency. WARNING: Staging the LES will also decouple it from the bottom node, in order to dispose of it after launch. Map the engine to the ABORT action group for emergency use.
 	attachRules = 1,0,1,1,0
 	mass = 0.4679
@@ -43,7 +43,7 @@ PART
 	stageOffset = 1
 	bulkheadProfiles = size00
 
-	tags = mercury hermes les launch abort escape tower 0.625 .625 625
+	tags = mercury les launch abort escape tower
 
 	EFFECTS
 	{
