--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryNoseCap.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryNoseCap.cfg
@@ -1,6 +1,6 @@
 PART
 {
-	name = ROC-MercuryNoseCap
+	name = ROC-MercuryNoseCapBDB
 	module = Part
 	author = CobaltWolf
 	
@@ -21,7 +21,7 @@ PART
 		method = FIXED_JOINT
 	}
 
-	rescaleFactor = 1.0
+	rescaleFactor = 1.512
 	node_stack_bottom = 0.0, -0.148621, 0.0, 0.0, -1.0, 0.0, 0
 	node_stack_top = 0.0, 0.2688744, 0.0, 0.0, 1.0, 0.0, 0
 	TechRequired = engineering101
@@ -44,7 +44,7 @@ PART
 	bulkheadProfiles = size0
 	bodyLiftMultiplier = 0
 
-	tags = mercury hermes  antenna
+	tags = mercury hermes antenna
 
 	//	============================================================================
 	//	Comms
@@ -87,7 +87,7 @@ PART
 	//	Parachute
 	//	============================================================================
 
-	MODULE
+	MODULE:NEEDS[!RealChute]
 	{
 		name = ModuleParachute
 		invertCanopy = true
@@ -107,6 +107,33 @@ PART
 		chuteMaxTemp = 1600
 		machHeatMultBase = 0.25
 		chuteThermalMassPerArea = 0.09
+	}
+
+	MODULE:NEEDS[RealChute]
+	{
+		name = RealChuteModule
+		caseMass = 0.03
+		mustGoDown = True
+		spareChutes = 1
+		cutSpeed = 0.5
+
+		PARACHUTE
+		{
+			parachuteName = canopy
+			capName = Cap
+			preDeploymentAnimation = semi_deploy
+			deploymentAnimation = full_deploy
+			material = Nylon
+			minIsPressure = False
+			minPressure = 0.01
+			preDeployedDiameter = 1
+			preDeploymentSpeed = 2
+			minDeployment = 7000
+			deployedDiameter = 5
+			deploymentSpeed = 0.125
+			deploymentAlt = 7000
+			cutAlt = 0
+		}
 	}
 
 
@@ -179,7 +206,7 @@ PART
 //	================================================================================
 //	Configure RealAntennas
 //	================================================================================
-@PART[ROC-MercuryNose]:BEFORE[RealAntennas]:NEEDS[RealAntennas]
+@PART[ROC-MercuryNoseCapBDB]:BEFORE[RealAntennas]:NEEDS[RealAntennas]
 {
 	@MODULE[ModuleDataTransmitter]
 	{
