--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryParachute.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryParachute.cfg
@@ -1,16 +1,19 @@
 ﻿PART
 {
-	name = bluedog_Mercury_Parachute
+	name = ROC-MercuryParachuteBDB
 	module = Part
 	author = CobaltWolf
 
+	RSSROConfig = true
+	RP0conf = true
+
 	MODEL
 	{
-		model = Bluedog_DB/Parts/Mercury/bluedog_Mercury_Parachute
+		model = ROCapsules/Assets/BDB/Mercury/bluedog_Mercury_Parachute
 		rotation = 0, 180, 0
 	}
 
-	rescaleFactor = 1
+	rescaleFactor = 1.512
 	//node_stack_bottom = 0.0, -0.120649, 0.0, 0.0, -1.0, 0.0, 0
 
 	NODE
@@ -25,16 +28,17 @@
 	buoyancyUseCubeNamed = PACKED
 	sound_parachute_open = activate
 	sound_parachute_single = deploy
+	
 	TechRequired = engineering101
 	entryCost = 1000
 	cost = 200
 	category = Utility
 	subcategory = 0
-	title = Hermes-MASD Main Parachute
-	description = Main parachute for the Hermes capsule. Attach to the node in the recovery section.
-	real_title = Mercury-MASD Main Parachute
+	title = Mercury-MASD Main Parachute
+	manufacturer = McDonnell Aircraft
+	description = Main parachute for the Mercury capsule. Attach to the node in the recovery section.
 	attachRules = 1,0,0,1,0
-	mass = 0.02
+	mass = 0.06
 	dragModelType = default
 	angularDrag = 3
 	crashTolerance = 12
@@ -43,14 +47,16 @@
 	stageOffset = -1
 	bulkheadProfiles = size0, srf
 	bodyLiftMultiplier = 0
-	tags = arrest canopy chute decel descen drag entry fall landing re- return safe slow white mercury hermes
+	
+	tags = arrest canopy chute decel descen drag entry fall landing re- return safe slow white mercury
 
 
-	MODULE
+	MODULE:NEEDS[!RealChute]
 	{
 		name = ModuleParachute
 		semiDeployedAnimation = semi_deploy
 		fullyDeployedAnimation = full_deploy
+		shieldedCanDeploy = true
 		invertCanopy = false
 		autoCutSpeed = 0.5
 		capName = Cap
@@ -66,16 +72,44 @@
 		chuteMaxTemp = 650
 	}
 
+	MODULE:NEEDS[RealChute]
+	{
+		name = RealChuteModule
+		caseMass = 0.0421
+		mustGoDown = True
+		shieldedCanDeploy = true
+		spareChutes = 1
+		cutSpeed = 0.5
+
+		PARACHUTE
+		{
+			parachuteName = canopy
+			capName = Cap
+			preDeploymentAnimation = semi_deploy
+			deploymentAnimation = full_deploy
+			material = Nylon
+			minIsPressure = False
+			minPressure = 0.01
+			preDeployedDiameter = 5
+			preDeploymentSpeed = 2
+			minDeployment = 3000
+			deployedDiameter = 19.2
+			deploymentSpeed = 6
+			deploymentAlt = 1000
+			cutAlt = 0
+		}
+	}
+
 	MODULE
 	{
 		name = ModuleDragModifier
 		dragCubeName = SEMIDEPLOYED
-		dragModifier = 6 //1.25
+		dragModifier = 4 //1.25
 	}
 	MODULE
 	{
 		name = ModuleDragModifier
 		dragCubeName = DEPLOYED
-		dragModifier = 10.7 //12
+		dragModifier = 45 //12
 	}
 }
