--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryRCS.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryRCS.cfg
@@ -1,15 +1,19 @@
 PART
 {
-	name = bluedog_Mercury_ParachuteRCS
+	name = ROC-MercuryRCSBDB
 	module = Part
 	author = CobaltWolf
 
+	RSSROConfig = true
+	RP0conf = true
+
 	MODEL
 	{
-		model = Bluedog_DB/Parts/Mercury/bluedog_Mercury_ParachuteRCS
+		model = ROCapsules/Assets/BDB/Mercury/bluedog_Mercury_ParachuteRCS
 		rotation = 0, 180, 0
 	}
-	rescaleFactor = 1.0
+
+	rescaleFactor = 1.512
 	node_stack_top = 0.0, 0.27984, 0.0, 0.0, 1.0, 0.0, 0
 	node_stack_bottom = 0.0, -0.17365, 0.0, 0.0, -1.0, 0.0, 0
 
@@ -25,15 +29,12 @@ PART
 	sound_vent_soft = decouple
 	TechRequired = engineering101
 	entryCost = 1500
-	cost =  500
+	cost =	500
 	category = Control
 	subcategory = 0
-	title = Hermes M-LCM Recovery Module
-	manufacturer = Bloeting Areospace Corporation
-	description = This part contains four way RCS thrusters and a goo experiment. Questionably-important parachute sold separately. <#DD002F>AUTHOR'S NOTE: DON'T FORGET TO ADD THE SEPARATE MAIN PARACHUTE! AN INTERIOR SPACE AND ATTACH NODE IS PROVIDED.</color>
-	real_title = Mercury Landing and Control Module
-	real_manufacturer = McDonnell Aircraft
-	real_description = This part contains four way RCS thrusters to help orient the Mercury capsule and a goo experiment. Questionably-important parachute sold separately. <#DD002F>AUTHOR'S NOTE: DON'T FORGET TO ADD THE SEPARATE MAIN PARACHUTE! AN INTERIOR SPACE AND ATTACH NODE IS PROVIDED.</color>
+	title = Mercury Landing and Control Module
+	manufacturer = McDonnell Aircraft
+	description = This part contains four way RCS thrusters to help orient the Mercury capsule and a goo experiment. Questionably-important parachute sold separately. <#DD002F>AUTHOR'S NOTE: DON'T FORGET TO ADD THE SEPARATE MAIN PARACHUTE! AN INTERIOR SPACE AND ATTACH NODE IS PROVIDED.</color>
 	attachRules = 1,0,1,1,0
 	mass = 0.07
 	dragModelType = default
@@ -43,14 +44,15 @@ PART
 	crashTolerance = 12
 	breakingForce = 50
 	breakingTorque = 50
-	maxTemp = 2000
+	maxTemp = 773.15
+	skinMaxTemp = 2573.15
 	fuelCrossFeed = True
 	bodyLiftMultiplier = 0
 	bulkheadProfiles = size0
 
-	tags = mercury hermes 0.625 .625 625 rcs parachute mono monopropellant
+	fuelCrossFeed = true
 
-	techtag = mercury
+	tags = mercury rcs parachute control
 
 	EFFECTS
 	{
@@ -64,38 +66,23 @@ PART
 				volume = 0.0 0.0
 				volume = 0.1 0.0
 				volume = 0.5 0.025
-				volume = 1.0 0.2
+				volume = 1.0 0.1
 				pitch = 0.0 0.75
 				pitch = 1.0 1.5
 				loop = true
 			}
 			MODEL_MULTI_PARTICLE
 			{
-				name = sharp
-				modelName = Bluedog_DB/FX/PlumeParty/RCS/soyuzShock_0p4
+				modelName = Squad/FX/Monoprop_small
 				transformName = rcsTransform
 				emission = 0.0 0.0
-				emission = 0.1 0.3
+				emission = 0.1 0.0
 				emission = 1.0 1.0
 				speed = 0.0 0.8
 				speed = 1.0 1.0
 				localRotation = -90, 0, 0
-				localScale = 1,1,1
 			}
-			MODEL_MULTI_PARTICLE
-			{
-				name = soft
-				modelName = Bluedog_DB/FX/PlumeParty/RCS/soyuzWide_0p4
-				transformName = rcsTransform
-				emission = 0.0 0.0
-				emission = 0.1 0.3
-				emission = 1.0 1.0
-				speed = 0.0 0.8
-				speed = 1.0 1.0
-				localRotation = -90, 0, 0
-				localScale = 1,1,1
-			}
-		}
+		}		
 	}
 
 
@@ -120,7 +107,7 @@ PART
 		startEventGUIName = Deploy Goo Experiment
 		endEventGUIName = Close Goo Experiment
 		actionGUIName = Toggle Cover
-        evaDistance = 1.5
+		evaDistance = 1.5
 		layer = 5
 	}
 
@@ -140,29 +127,10 @@ PART
 
 	MODULE
 	{
-		name = ModuleScienceExperiment
-		experimentID = mysteryGoo
-		experimentActionName = Observe Mystery Goo
-		resetActionName = Reset Goo Canister
-		useStaging = False
-		useActionGroups = True
-		hideUIwhenUnavailable = True
-		xmitDataScalar = 0.3
-		FxModules = 1
-		dataIsCollectable = True
-		collectActionName = Collect Data
-		interactionRange = 1.5
-		usageReqMaskInternal = 1
-		usageReqMaskExternal = 8
-	}
-
-	MODULE
-	{
 		name = ModuleRCSFX
 		stagingEnabled = False
 		thrusterTransformName = rcsTransform
-		thrusterPower = 0.125
-		resourceName = MonoPropellant
+		thrusterPower = 0.1067573
 		resourceFlowMode = STAGE_PRIORITY_FLOW
 		runningEffectName = rcs
 
@@ -178,10 +146,16 @@ PART
 		enableZ = false
 
 
+		PROPELLANT
+		{
+			name = HTP
+			ratio = 1.0
+		}
+
 		atmosphereCurve
 		{
-			key = 0 240
-			key = 1 100
+			key = 0 267
+			key = 1 57
 			key = 4 0.001
 		}
 	}
@@ -192,22 +166,6 @@ PART
 		ejectionForce = 20
 		explosiveNodeID = top
 		staged = true
-	}
-
-	MODULE
-	{
-		name = ModuleBdbMercuryAbortChuteController
-		topNodeName = top
-		chuteNodeName = parachute
-	}
-
-	MODULE
-	{
-		name = ModuleBdbDefAGHelper
-		actionModuleName = ModuleBdbMercuryAbortChuteController
-		actionModuleIndex = 0 // Index if more than one module with same name
-		actionName = AbortAction
-		actionDefaultActionGroup = Abort
 	}
 
 	MODULE
@@ -227,7 +185,7 @@ PART
 			name = White
 			TEXTURE
 			{
-				texture = Bluedog_DB/Parts/Mercury/bluedog_Mercury_AlternateTextures
+				texture = ROCapsules/Assets/BDB/Mercury/bluedog_Mercury_AlternateTextures
 				transform = Skin
 			}
 		}
@@ -240,7 +198,7 @@ PART
 		startEventGUIName = Light On
 		endEventGUIName = Light Off
 		actionGUIName = Toggle Light
-    	defaultActionGroup = Light
+		defaultActionGroup = Light
 		restrictedNode = top
 	}
 	
