Fix Chute maybe?

--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryNoseCap.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryNoseCap.cfg
@@ -214,3 +214,17 @@ PART
 		referenceGain = 2.0		//Estimated size, can't find any documentation
 	}
 }
+
+@PART[ROC-MercuryNoseCapBDB]:AFTER[zzzRealismOverhaul]
+{
+	// RO forces all RealChuteModules to minDeploy 5000, deploy 1000,
+	// Get back our historical numbers
+	@MODULE[RealChuteModule]
+	{
+		@PARACHUTE
+		{
+			@minDeployment = 7000
+			@deploymentAlt = 5000
+		}
+	}
+}
