--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryRCS.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryRCS.cfg
@@ -13,6 +13,12 @@ PART
 		rotation = 0, 180, 0
 	}
 
+	MODEL
+	{
+		model = ROCapsules/Assets/BDB/Mercury/bluedog_Mercury_Parachute
+		rotation = 0, 180, 0
+	}
+
 	rescaleFactor = 1.512
 	node_stack_top = 0.0, 0.27984, 0.0, 0.0, 1.0, 0.0, 0
 	node_stack_bottom = 0.0, -0.17365, 0.0, 0.0, -1.0, 0.0, 0
@@ -34,7 +40,7 @@ PART
 	subcategory = 0
 	title = Mercury Landing and Control Module
 	manufacturer = McDonnell Aircraft
-	description = This part contains four way RCS thrusters to help orient the Mercury capsule and a goo experiment. Questionably-important parachute sold separately. <#DD002F>AUTHOR'S NOTE: DON'T FORGET TO ADD THE SEPARATE MAIN PARACHUTE! AN INTERIOR SPACE AND ATTACH NODE IS PROVIDED.</color>
+	description = This part contains four way RCS thrusters to help orient the Mercury capsule and the main parachute.
 	attachRules = 1,0,1,1,0
 	mass = 0.07
 	dragModelType = default
@@ -82,10 +88,69 @@ PART
 				speed = 1.0 1.0
 				localRotation = -90, 0, 0
 			}
-		}		
+		}
 	}
 
+	MODULE:NEEDS[!RealChute]
+	{
+		name = ModuleParachute
+		semiDeployedAnimation = semi_deploy
+		fullyDeployedAnimation = full_deploy
+		shieldedCanDeploy = true
+		invertCanopy = false
+		autoCutSpeed = 0.5
+		capName = Cap
+		canopyName = canopy
+		stowedDrag = 0.22
+		semiDeployedDrag = 1
+		fullyDeployedDrag = 300
+		minAirPressureToOpen = 0.04
+		clampMinAirPressure = 0.01
+		deployAltitude = 1000
+		deploymentSpeed = 0.12
+		semiDeploymentSpeed = 1 //0.5
+		chuteMaxTemp = 650
+	}
 
+	MODULE:NEEDS[RealChute]
+	{
+		name = RealChuteModule
+		caseMass = 0.07
+		mustGoDown = True
+		spareChutes = 1
+		cutSpeed = 0.5
+
+		PARACHUTE
+		{
+			parachuteName = canopy
+			capName = Cap
+			preDeploymentAnimation = semi_deploy
+			deploymentAnimation = full_deploy
+			material = Nylon
+			minIsPressure = False
+			minPressure = 0.01
+			preDeployedDiameter = 5
+			preDeploymentSpeed = 2
+			minDeployment = 3000
+			deployedDiameter = 19.2
+			deploymentSpeed = 6
+			deploymentAlt = 1000
+			cutAlt = 0
+		}
+	}
+
+	MODULE
+	{
+		name = ModuleDragModifier
+		dragCubeName = SEMIDEPLOYED
+		dragModifier = 4 //1.25
+	}
+	MODULE
+	{
+		name = ModuleDragModifier
+		dragCubeName = DEPLOYED
+		dragModifier = 45 //12
+	}
 
 	MODULE
 	{
@@ -109,20 +174,6 @@ PART
 		actionGUIName = Toggle Cover
 		evaDistance = 1.5
 		layer = 5
-	}
-
-	MODULE
-	{
-		name = ModuleDataTransmitter
-		antennaType = DIRECT
-		packetInterval = 1.2
-		packetSize = 2
-		packetResourceCost = 3.0
-		requiredResource = ElectricCharge
-		DeployFxModules = 0
-		antennaPower = 125000
-		antennaCombinable = True
-		antennaCombinableExponent = 1
 	}
 
 	MODULE
@@ -219,16 +270,6 @@ PART
 		{
 			IDENTIFIER
 			{
-				name = ModuleDataTransmitter
-				antennaType = DIRECT
-			}
-			uiGroupName = recovery
-			uiGroupDisplayName = Recovery
-		}
-		MODULE
-		{
-			IDENTIFIER
-			{
 				name = ModuleAnimateGeneric
 				animationName = antenna_deploy
 			}
@@ -245,5 +286,24 @@ PART
 			uiGroupName = recovery
 			uiGroupDisplayName = Recovery
 		}
+	}
+}
+
+@PART[ROC-MercuryRCSBDB]:AFTER[zzzRealismOverhaul]
+{
+	// RO forces all RealChuteModules to minDeploy 5000, deploy 1000,
+	// Get back our historical numbers
+	@MODULE[RealChuteModule]
+	{
+		@PARACHUTE
+		{
+			@minDeployment = 3000
+			@deploymentAlt = 1000
+		}
+	}
+	
+	@MODULE[ModuleToggleCrossfeed]
+	{
+		%crossfeedStatus = true
 	}
 }
