--- a/GameData/ROCapsules/PartConfigs/Mercury/MercuryAdapterRedstone.cfg
+++ b/GameData/ROCapsules/PartConfigs/Mercury/MercuryAdapterRedstone.cfg
@@ -38,7 +38,7 @@ PART
 	
 	mass = 0.112
 
-	category = Utility
+	category = -1
 	subcategory = 0
 	
 	tags = mercury, reentry, decoupler, dec, redstone
