--- a/GameData/ROCapsules/PartConfigs/Mercury/MercuryNose.cfg
+++ b/GameData/ROCapsules/PartConfigs/Mercury/MercuryNose.cfg
@@ -38,7 +38,7 @@ PART
 	
 	mass = 0.040
 
-	category = Utility
+	category = -1
 	subcategory = 0
 	
 	tags = mercury, grissom, schirra, glenn, comms, antenna
