Apollo Miscellaneous Patching Structure
Duplicate and patch differences, versus completely re-declare similar parts for HGA Antenna, MissionModule
Bugfix: HGABLockIII RT patch had no effect
Add missing NEEDS
Fix RealPlume Pass

--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloEngineBlockIII.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloEngineBlockIII.cfg
@@ -188,7 +188,7 @@ PART
 //	Block III SPS plume configuration.
 //	==================================================
 
-@PART[ROC-ApolloEngineBlockIII]:FOR[RealPlume]:NEEDS[SmokeScreen]
+@PART[ROC-ApolloEngineBlockIII]:BEFORE[RealPlume]
 {
 	PLUME
 	{
