--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloHGABlockIII.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloHGABlockIII.cfg
@@ -46,7 +46,7 @@ PART
 		allowAnimationWhileShielded = False
 	}
 
-	MODULE
+	MODULE:NEEDS[!RemoteTech]
 	{
 		name = ModuleDataTransmitter
 		antennaType = RELAY
@@ -58,24 +58,23 @@ PART
 		antennaPower = 10000000
 		antennaCombinable = True
 	}
-}
-@PART[ROC-ApolloHGABlockIII]:NEEDS[RemoteTech&ROCapsules]
-{
-	// Changed to be the same as the Communotron 16. Only designed for LEO use.
-	@MODULE[ModuleRTAntenna]
+	MODULE:NEEDS[RemoteTech]
 	{
-		@Mode0OmniRange = 0
-		@Mode1OmniRange = 2000000
-		@EnergyCost = 0.008
+		// Changed to be the same as the Communotron 16. Only designed for LEO use.
+		name = ModuleRTAntenna
+		Mode0OmniRange = 0
+		Mode1OmniRange = 2000000
+		EnergyCost = 0.008
 
-		@TRANSMITTER
+		TRANSMITTER
 		{
-			@PacketInterval = 1.0
-			@PacketSize = 1.280
-			@PacketResourceCost = 0.004
+			PacketInterval = 1.0
+			PacketSize = 1.280
+			PacketResourceCost = 0.004
 		}
 	}
 }
+
 @PART[ROC-ApolloHGABlockIII]:BEFORE[RealAntennas]:NEEDS[RealAntennas]
 {
 	!MODULE[ModuleDataTransmitter],* {}
