--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloHGABlockV.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloHGABlockV.cfg
@@ -1,79 +1,30 @@
-PART
++PART[ROC-ApolloHGABlockIII]:FIRST
 {
-	name = ROC-ApolloHGABlockV
-	module = Part
-	author = CobaltWolf, capkirk
-	MODEL
-	{
-		model = ROCapsules/Assets/BDB/bluedog_Apollo_Block5_HGA
-		rotation = 0.0, -60.0, 0.0
-	}
-	RSSROConfig = True
-	scale = 1
-	rescaleFactor = 1.5646
-	node_attach = 0.0, 0.04, 0.0, 0.0, 1.0 , 0.0
-	TechRequired = commandModules
-	entryCost = 1500
-	cost = 800
-	category = Communication
-	subcategory = 0
-	title = Apollo Block V High Gain Antenna
-	manufacturer = Boeing
-	description = A collapsible relay antenna consisting of a high gain dish, for transmitting the many exciting things you've discovered. Intended to be placed on the mounting bracket of the Apollo Service Engine Block V. FICTIONAL (Eyes Turned Skyward)
-	attachRules = 1,1,0,0,1
-	mass = 0.025
-	dragModelType = default
-	maximum_drag = 0.2
-	minimum_drag = 0.2
-	angularDrag = 2
-	crashTolerance = 7
-	maxTemp = 1973.15
-	PhysicsSignificance = 1
-	bulkheadProfiles = srf
-	
-	tags = aerial antenna radio signal transmit comm communicat dish Apollo Kane block ?5 ?v
-	
-	MODULE
-	{
-		name = ModuleAnimateGeneric
-		animationName = deploy
-		isOneShot = false
-		startEventGUIName = Extend Antenna
-		endEventGUIName = Retract Antenna
-		actionGUIName = Toggle Antenna
-		allowAnimationWhileShielded = False
-	}
+	@name = ROC-ApolloHGABlockV
+	%title = Apollo Block V High Gain Antenna
+	@manufacturer = Boeing
+	@description = A collapsible relay antenna consisting of a high gain dish, for transmitting the many exciting things you've discovered. Intended to be placed on the mounting bracket of the Apollo Service Engine Block V. FICTIONAL (Eyes Turned Skyward)
 
-	MODULE
+	@MODEL
 	{
-		name = ModuleDataTransmitter
-		antennaType = RELAY
-		packetInterval = 0.35
-		packetSize = 4
-		packetResourceCost = 18.0
-		requiredResource = ElectricCharge
-		DeployFxModules = 0
-		antennaPower = 10000000
-		antennaCombinable = True
+		@model = ROCapsules/Assets/BDB/bluedog_Apollo_Block5_HGA
+		%rotation = 0.0, -60.0, 0.0
+	}
+	%RSSROConfig = True
+	@rescaleFactor = 1.5646
+	@mass = 0.025
+
+	%TechRequired = commandModules
+	
+	%tags = aerial antenna radio signal transmit comm communicat dish Apollo Kane block ?5 ?v
+
+	@MODULE[ModuleRTAntenna]:NEEDS[RemoteTech]
+	{
+		@Mode1OmniRange *= 2
 	}
 }
-@PART[ROC-ApolloHGABlockV]:NEEDS[RemoteTech&ROCapsules]
-{
-	@MODULE[ModuleRTAntenna]
-	{
-		@Mode0OmniRange = 0
-		@Mode1OmniRange = 10000000
-		@EnergyCost = 0.008
 
-		@TRANSMITTER
-		{
-			@PacketInterval = 1.0
-			@PacketSize = 1.280
-			@PacketResourceCost = 0.004
-		}
-	}
-}
-@PART[ROC-ApolloHGABlockV]:BEFORE[RealAntennas]:NEEDS[RealAntennas]
+@PART[ROC-ApolloHGABlockV]:BEFORE[RealAntennas]
 {
 	!MODULE[ModuleDataTransmitter],* {}
 	MODULE
