--- a/GameData/ROCapsules/PartConfigs/Apollo/ApolloForwardHS.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo/ApolloForwardHS.cfg
@@ -106,17 +106,11 @@ PART
         undockEjectionForce = 0.1
 	}
 	
-	MODULE
+	MODULE:NEEDS[ConnectedLivingSpace]
     {
         name = ModuleConnectedLivingSpace
         passable = True
     }
-	
-	//  ============================================================================
-	//	Comms
-	//  ============================================================================
-	
-	
 	
 	//  ============================================================================
 	//	Animations and Textures
@@ -124,5 +118,4 @@ PART
 	
 	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, decouple
 	sound_decoupler_fire = decouple
-	
 }
