--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloMissionModule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloMissionModule.cfg
@@ -91,94 +91,39 @@ PART
 	}
 }
 
-PART
++PART[ROC-ApolloMissionModule]:FIRST
 {
-	name = ROC-ApolloMissionModule4
-	module = Part
-	author = CobaltWolf
-	MODEL
+	@name = ROC-ApolloMissionModule4
+	@author = CobaltWolf
+	@MODEL
 	{
-		model = ROCapsules/Assets/BDB/bluedog_Apollo_Block4_MissionModule
+		@model = ROCapsules/Assets/BDB/bluedog_Apollo_Block4_MissionModule
 	}
-	RSSROConfig = True
-	scale = 1
-	rescaleFactor = 1.56463
-	node_stack_top = 0.0, 1.02, 0.0, 0.0, 1.0, 0.0, 2
-	node_stack_bottom = 0.0, -1.02, 0.0, 0.0, -1.0, 0.0, 2
-	CrewCapacity = 2
-	TechRequired = composites
-	entryCost = 1400
-	cost = 10000
-	category = Pods
-	subcategory = 0
-	title = Apollo Block IV Mission Module
-	manufacturer = Rockwell International
-	description = Following the introduction of more capable lifters for crewed LEO missions, the venerable Apollo Block III+ mission module was replaced with a larger can. Includes a larger attachment node on top for using larger androgynous docking ports. Place it upside down in place of the lunar module, with docking ports on each end. Extract with the CSM after circularization.
-	attachRules = 1,0,1,1,0
-	mass = 4.5
-	dragModelType = default
-	maximum_drag = 0.2
-	minimum_drag = 0.3
-	angularDrag = 2
-	crashTolerance = 4
-	breakingForce = 200
-	breakingTorque = 200
-	maxTemp = 1973.15
-	skinMaxTemp = 2000
-	vesselType = Ship
-	bulkheadProfiles = size2
-	tags = base cabin (can outpost passenger statio tour tuna Apollo Kane orbital mission module block ?4 ?iii
-	
-	INTERNAL
+	@node_stack_top = 0.0, 1.02, 0.0, 0.0, 1.0, 0.0, 2
+	@node_stack_bottom = 0.0, -1.02, 0.0, 0.0, -1.0, 0.0, 2
+
+	@title = Apollo Block IV Mission Module
+	@description = Following the introduction of more capable lifters for crewed LEO missions, the venerable Apollo Block III+ mission module was replaced with a larger can. Includes a larger attachment node on top for using larger androgynous docking ports. Place it upside down in place of the lunar module, with docking ports on each end. Extract with the CSM after circularization.
+
+	@mass = 4.5
+
+	@TechRequired = composites
+	@entryCost = 1400
+	@cost = 10000
+	%tags = base cabin (can outpost passenger statio tour tuna Apollo Kane orbital mission module block ?4 ?iii
+
+	@MODULE[ModuleFuelTanks]
 	{
-		name = crewCabinInternals
+		@volume = 2500
 	}
-	MODULE
+
+	@MODULE[ModuleAnimateGeneric]:HAS[#animationName[Block3MM_Window_Emit]]
 	{
-		name = ModuleFuelTanks
-		type = ServiceModule
-		volume = 2500
-		basemass = -1
+		@animationName = Block4MM_Window_Emit
 	}
-	MODULE
+
+	@MODULE[ModuleAnimateGeneric]:HAS[#animationName[Block3MM_Spotlight_Emit]]
 	{
-		name = ModuleScienceExperiment
-		experimentID = crewReport
-		experimentActionName = Crew Report
-		resetActionName = Discard Crew Report
-		reviewActionName = Review Report
-		useStaging = False
-		useActionGroups = True
-		hideUIwhenUnavailable = True
-		rerunnable = True
-		xmitDataScalar = 1.0
-		usageReqMaskInternal = 5
-		usageReqMaskExternal = -1
-	}
-	MODULE
-	{
-		name = ModuleScienceContainer
-		reviewActionName = Review Stored Data
-		storeActionName = Store Experiments
-		evaOnlyStorage = True
-		storageRange = 2.0
-	}
-	MODULE
-	{
-		name = ModuleAnimateGeneric
-		animationName = Block4MM_Window_Emit
-		startEventGUIName = Lights On
-		endEventGUIName = Lights Off
-		actionGUIName = Toggle Lights
-		defaultActionGroup = Light
-	}
-	MODULE
-	{
-		name = ModuleAnimateGeneric
-		animationName = Block4MM_Spotlight_Emit
-		actionGUIName = Toggle Spotlight
-		startEventGUIName = Spotlight On
-		endEventGUIName = Spotlight Off
-		defaultActionGroup = Light
+		@animationName = Block4MM_Spotlight_Emit
 	}
 }
