Prep for RO Heatshield Rework
Set up to use a new tool in RO, instead of declaring custom heatshield stats
Retain fallback if being used without RO.
Remove RP0conf declaration.  RP0 will handle
Add missing NEEDS
Use new LAST MM patch for some cleanup

--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloCMBlockIII+.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloCMBlockIII+.cfg
@@ -5,7 +5,6 @@ PART
 	author = DECQ, Pap, capkirk
 	
 	RSSROConfig = true
-	RP0conf = true
 	
 	//	============================================================================
 	//	Model and Dimensions
@@ -35,7 +34,6 @@ PART
 	
 	scale = 1.0
 	rescaleFactor = 1.0
-	
 	
 	node_stack_top = 0.0, 0.87, 0.0, 0.0, 1.0, 0.0, 1
 	node_stack_para = 0.0, 0.87, 0.0, 0.0, -1.0, 0.0, 1
@@ -82,7 +80,6 @@ PART
 		
 	crashTolerance = 8
 	maxTemp = 973.15
-	skinMaxTemp = 3573.15
 	emissiveConstant = 0.6 // not too absorptive for reentry
 	thermalMassModifier = 1.0
 	skinMassPerArea = 2.0
@@ -91,56 +88,6 @@ PART
 	breakingTorque = 250
 	
 	fuelCrossfeed = true
-	
-	MODULE:NEEDS[!DeadlyReentry]
-	{
-		name = ModuleAblator
-		ablativeResource = Ablator
-		outputResource = CharredAblator
-		outputMult = 0.75
-		useChar = True
-		charModuleName = HeatShieldCharAnim
-		charMin = 0
-		charMax = 1
-		lossExp = -40000
-		lossConst = 15000
-		pyrolysisLossFactor = 40000
-		ablationTempThresh = 500
-		reentryConductivity = 0.01
-	}
-	
-	MODULE:NEEDS[DeadlyReentry]
-	{
-		name = ModuleHeatShield
-		ablativeResource = Ablator
-		outputResource = CharredAblator
-		outputMult = 0.75
-		useChar = True
-		charModuleName = HeatShieldCharAnim
-		charMin = 0
-		charMax = 1
-		lossExp = -40000
-		lossConst = 15000
-		pyrolysisLossFactor = 40000
-		ablationTempThresh = 500
-		reentryConductivity = 0.01
-		depletedMaxTemp = 1200
-	}
-	
-	RESOURCE
-	{
-		name = Ablator
-		amount = 848
-		maxAmount = 848
-	}
-	
-	RESOURCE
-	{
-		name = CharredAblator
-		amount = 0
-		maxAmount = 636
-		isTweakable = False
-	}
 	
 	MODULE
 	{
@@ -202,8 +149,6 @@ PART
 		DescentModeCoM = 0, 0, 0.17
 	}
 
-	@CoMOffset = 0.0, -0.25, 0.0
-	
 	MODULE
 	{
 		name = ModuleScienceContainer
@@ -237,7 +182,7 @@ PART
 		attachNodeName = bottom
 	}
 	
-	MODULE 
+	MODULE:NEEDS[RasterPropMonitor]
 	{
 		name = RasterPropMonitorComputer
 		RPM_COLOROVERRIDE
@@ -576,6 +521,68 @@ PART
 	}
 }
 
+// Let RO Heatshield configure defaults
+@PART[ROC-ApolloCMBlockIII]:BEFORE[RealismOverhaul_HeatShield]
+{
+    heatShieldDiameter  = 3.91      // Previous Ablator = 848 corresponds to 3.68 diameter Lunar RO formula
+    heatShieldTag = Lunar
+    resetHeatShieldAblator = true
+}
+// Specific adjustments after default setup
+@PART[ROC-ApolloCMBlockIII]:AFTER[RealismOverhaul_HeatShield]
+{
+    @MODULE[ModuleAblator]
+    {
+        charModuleName = HeatShieldCharAnim
+        charMin = 0
+        charMax = 1
+    }
+}
+
+// Non-RO Heatshield setup
+@PART[ROC-ApolloCMBlockIII]:FIRST:NEEDS[!RealismOverhaul]
+{
+    skinMaxTemp = 3573.15
+    MODULE
+    {
+        name = ModuleAblator
+        ablativeResource = Ablator
+        outputResource = CharredAblator
+        outputMult = 0.75
+        useChar = True
+        charModuleName = HeatShieldCharAnim
+        charMin = 0
+        charMax = 1
+        lossExp = -40000
+        lossConst = 15000
+        pyrolysisLossFactor = 40000
+        ablationTempThresh = 500
+        reentryConductivity = 0.01
+    }
+
+    MODULE:NEEDS[DeadlyReentry]
+    {
+        name = ModuleHeatShield
+        depletedMaxTemp = 1200
+    }
+
+    RESOURCE
+    {
+        name = Ablator
+        amount = 848
+        maxAmount = 848
+    }
+    
+    RESOURCE
+    {
+        name = CharredAblator
+        amount = 0
+        maxAmount = 636
+        isTweakable = False
+    }
+}
+
+
 //	================================================================================
 //	TAC Life Support Compatibility
 //	================================================================================
@@ -686,7 +693,7 @@ PART
 //	Final Pass to Make Sure TAC does not add extra resources
 //	================================================================================
 
-@PART[ROC-ApolloCMBlockIII]:FOR[zzzRealismOverhaul]
+@PART[ROC-ApolloCMBlockIII]:LAST[ROCapsules]
 {
 	!RESOURCE:HAS[~name[Ablator],~name[CharredAblator]],*{}
 }
