--- a/GameData/ROCapsules/PartConfigs/Apollo/ApolloCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo/ApolloCM.cfg
@@ -560,9 +560,9 @@ PART
         reentryConductivity = 0.01
     }
 
-    MODULE:NEEDS[DeadlyReentry]
+    @MODULE[ModuleAblator]:NEEDS[DeadlyReentry]
     {
-        name = ModuleHeatShield
+        @name = ModuleHeatShield
         depletedMaxTemp = 1200
     }
 
