--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryAirbrake.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryAirbrake.cfg
@@ -3,10 +3,9 @@ PART
 	name = ROC-MercuryAirbrakeBDB
 	module = Part
 	author = CobaltWolf, capkirk
-	
+
 	RSSROConfig = true
-	RP0conf = true
-	
+
 	MODEL
 	{
 		model = ROCapsules/Assets/BDB/Mercury/bluedog_Mercury_Airbrake
@@ -38,7 +37,8 @@ PART
 	dragModelType = default
 	angularDrag = 3
 	crashTolerance = 12
-	maxTemp = 2500 // = 3100
+	maxTemp = 2573.15
+	skinMaxTemp = 2573.15
 	emissiveConstant = 0.7
 	stageOffset = 1
 	childStageOffset = 1
@@ -67,8 +67,9 @@ PART
 		uncasedTemp = 1200
 		casedTemp = 2400
 	}
+
 	MODULE
-		{
+	{
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitchCover
 		switcherDescription = Cover
