--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryCM.cfg
@@ -2,10 +2,9 @@ PART
 {
 	name = ROC-MercuryCMBDB
 	module = Part
-	author = CobaltWolf
+	author = CobaltWolf, capkirk
 
 	RSSROConfig = true
-	RP0conf = true
 
 	MODEL
 	{
@@ -51,7 +50,7 @@ PART
 	manufacturer = McDonnell Aircraft
 	description = The first American spacecraft. Carrying a single astronaut, it can be launched suborbital on a Redstone or into orbit on Atlas LV3B.
 	attachRules = 1,0,1,1,0
-	mass = 0.47
+	mass = 0.583
 	dragModelType = default
 	maximum_drag = 0.20
 	minimum_drag = 0.15
@@ -197,7 +196,7 @@ PART
 		
 		atmosphereCurve
 		{
-			key = 0 267
+			key = 0 137
 			key = 1 57
 			key = 4 0.001
 		}
