--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryNoseCap.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryNoseCap.cfg
@@ -2,11 +2,10 @@ PART
 {
 	name = ROC-MercuryNoseCapBDB
 	module = Part
-	author = CobaltWolf
-	
+	author = CobaltWolf, capkirk
+
 	RSSROConfig = true
-	RP0conf = true
-	
+
 	MODEL
 	{
 		model = ROCapsules/Assets/BDB/Mercury/bluedog_Mercury_AntennaNose
@@ -143,6 +142,7 @@ PART
 		dragCubeName = SEMIDEPLOYED
 		dragModifier = 1 // 2.5
 	}
+
 	MODULE
 	{
 		name = ModuleDragModifier
