--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryRCS.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryRCS.cfg
@@ -2,10 +2,9 @@ PART
 {
 	name = ROC-MercuryRCSBDB
 	module = Part
-	author = CobaltWolf
+	author = CobaltWolf, capkirk
 
 	RSSROConfig = true
-	RP0conf = true
 
 	MODEL
 	{
@@ -42,7 +41,7 @@ PART
 	manufacturer = McDonnell Aircraft
 	description = This part contains four way RCS thrusters to help orient the Mercury capsule and the main parachute.
 	attachRules = 1,0,1,1,0
-	mass = 0.07
+	mass = 0.17
 	dragModelType = default
 	maximum_drag = 0.01
 	minimum_drag = 0.01
@@ -145,6 +144,7 @@ PART
 		dragCubeName = SEMIDEPLOYED
 		dragModifier = 4 //1.25
 	}
+
 	MODULE
 	{
 		name = ModuleDragModifier
@@ -169,8 +169,8 @@ PART
 	{
 		name = ModuleAnimateGeneric
 		animationName = goo_deploy
-		startEventGUIName = Deploy Goo Experiment
-		endEventGUIName = Close Goo Experiment
+		startEventGUIName = Deploy Experiment
+		endEventGUIName = Close Experiment
 		actionGUIName = Toggle Cover
 		evaDistance = 1.5
 		layer = 5
@@ -205,7 +205,7 @@ PART
 
 		atmosphereCurve
 		{
-			key = 0 267
+			key = 0 137
 			key = 1 57
 			key = 4 0.001
 		}
@@ -252,7 +252,7 @@ PART
 		defaultActionGroup = Light
 		restrictedNode = top
 	}
-	
+
 	MODULE
 	{
 		name = ModuleB9AssignUiGroups
