--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryDecoupler.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryDecoupler.cfg
@@ -2,10 +2,9 @@ PART
 {
 	name = ROC-MercuryDecouplerBDB
 	module = Part
-	author = CobaltWolf
+	author = CobaltWolf, capkirk
 
 	RSSROConfig = true
-	RP0conf = true
 
 	MODEL
 	{
