--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryLES.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryLES.cfg
@@ -2,10 +2,9 @@ PART
 {
 	name = ROC-MercuryLESBDB
 	module = Part
-	author = CobaltWolf
+	author = CobaltWolf, capkirk
 
 	RSSROConfig = true
-	RP0conf = true
 
 	MODEL
 	{
@@ -121,19 +120,25 @@ PART
 
 	MODULE
 	{
-		name = ModuleEnginesFX
-		engineID = LES
-		powerEffectName = running_abort
+		name = ModuleEnginesRF
 		thrustVectorTransformName = abortTransform
-		exhaustDamage = False
+		powerEffectName = running
 		throttleLocked = True
+		exhaustDamage = True
 		ignitionThreshold = 0.1
 		minThrust = 231.3
 		maxThrust = 231.3
-		heatProduction = 400
-		fxOffset = 0, 0, 0.25
-		EngineType = SolidBooster
-		stagingEnabled = false
+		heatProduction = 100
+		useEngineResponseTime = False
+		engineAccelerationSpeed = 0.0
+		allowShutdown = False
+		fxOffset = 0, 0, 0
+		staging = false
+		
+		%ullage = False
+		%pressureFed = False
+		%ignitions = 1
+		
 		PROPELLANT
 		{
 			name = PSPC
@@ -146,38 +151,9 @@ PART
 			key = 1 210
 			key = 6 0.001
 		}
-	}
 
-	MODULE
-	{
-		name = ModuleEnginesFX
-		engineID = jettison
-		powerEffectName = running_closed
-		thrustVectorTransformName = thrustTransform
-		exhaustDamage = False
-		throttleLocked = True
-		ignitionThreshold = 0.1
-		minThrust = 15
-		maxThrust = 15
-		heatProduction = 400
-		fxOffset = 0, 0, 0.25
-		EngineType = SolidBooster
-		stagingEnabled = false
-		PROPELLANT
-		{
-			name = PSPC
-			ratio = 1.0
-			DrawGauge = True
-		}
-		atmosphereCurve
-		{
-			key = 0 225
-			key = 1 210
-			key = 6 0.001
-		}
+		ActivatesEvenIfDisconnected = true
 	}
-
-	ActivatesEvenIfDisconnected = true
 
 	MODULE
 	{
@@ -202,13 +178,6 @@ PART
 		staged = true
 	}
 
-
-	MODULE
-	{
-		name = ModuleBdbMercuryLES
-		stagingEnabled = true
-	}
-	
 	MODULE
 	{
 		name = ModuleBdbDefAGHelper
@@ -216,10 +185,5 @@ PART
 		actionModuleIndex = 0 // Index if more than one module with same name
 		actionName = AbortAction
 		actionDefaultActionGroup = Abort
-	}
-
-	DRAG_CUBE
-	{
-		cube = Default, 0.7442,0.1,0.7026, 0.7442,0.1,0.6361, 0.3498,0.1,3.741, 0.3498,0.1,1.991, 0.6813,0.1,0.5942, 0.6813,0.1,0.6012, 8.941E-08,0.7403,-1.192E-07, 0.6913,3.647,0.6913
 	}
 }
