Fix RCS effects

--- a/GameData/ROCapsules/PartConfigs/CST/CSTRS88.cfg
+++ b/GameData/ROCapsules/PartConfigs/CST/CSTRS88.cfg
@@ -72,7 +72,12 @@ PART
 	@MODULE[ModuleEngineConfigs]
 	{
 		@configuration = LAE
+		@CONFIG[LAE]
+		{
+			%throttleResponseRate = 10
+		}
 
 		!CONFIG,*:HAS[~name[LAE]]{}
+		
 	}
 }
