--- a/GameData/ROCapsules/PartConfigs/CST/CSTSM.cfg
+++ b/GameData/ROCapsules/PartConfigs/CST/CSTSM.cfg
@@ -48,6 +48,36 @@ PART
 	
 	tags = starliner, boeing, cst100, cst-100, 100
 
+	EFFECTS
+	{
+		rcs
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_rocket_mini
+				volume = 0.0 0.0
+				volume = 0.1 0.0
+				volume = 0.5 0.025
+				volume = 1.0 0.1
+				pitch = 0.0 0.75
+				pitch = 1.0 1.5
+				loop = true
+			}
+			MODEL_MULTI_PARTICLE
+			{
+				modelName = Squad/FX/Monoprop_small
+				transformName = RCS
+				emission = 0.0 0.0
+				emission = 0.1 0.0
+				emission = 1.0 1.0
+				speed = 0.0 0.8
+				speed = 1.0 1.0
+				localRotation = -90, 0, 0
+			}
+		}
+	}
+
 	MODULE
 	{
 		name = ModuleDecouple
@@ -61,6 +91,7 @@ PART
 		thrusterTransformName = RCS
 		thrusterPower = 0.44
 		resourceFlowMode = STAGE_PRIORITY_FLOW
+		runningEffectName = rcs
 		
 		PROPELLANT
 		{
