Fix RCS and nosecone

--- a/GameData/ROCapsules/PartConfigs/CST/CSTNoseCone.cfg
+++ b/GameData/ROCapsules/PartConfigs/CST/CSTNoseCone.cfg
@@ -8,12 +8,13 @@ PART
 	MODEL
 	{
 		model = ROCapsules/Assets/CST/noseCone/CST101_CAP
+		//scale = 1.67, 1.67, 1.67
 	}
 	
 	scale = 1
-	rescaleFactor = 1.24
+	rescaleFactor = 2.15
 	
-	node_stack_bottom = 0.0, -0.04, 0.0, 0.0, -1.0, 0.0, 1
+	node_stack_bottom = 0.0, -0.17209, 0.0, 0.0, -1.0, 0.0, 1
 	fx_gasBurst_white = 0.0, -0.2, 0.0, 0.0, 1.0, 0.0, decouple
 	
 	sound_decoupler_fire = decouple
