--- a/GameData/ROCapsules/PartConfigs/CST/CSTParachute.cfg
+++ b/GameData/ROCapsules/PartConfigs/CST/CSTParachute.cfg
@@ -46,7 +46,7 @@ PART
 	
 	tags = starliner, boeing, cst100, cst-100, 100
 	
-	MODULE
+	MODULE:NEEDS[!RealChute]
 	{
 		name = ModuleParachute
 		invertCanopy = true
@@ -65,6 +65,35 @@ PART
 		semiDeploymentSpeed = 0.5
 		chuteMaxTemp = 423.15
 	}
+	
+	MODULE:NEEDS[RealChute]
+	{
+		name = RealChuteModule
+		caseMass = 0.26
+		mustGoDown = True
+		spareChutes = 0
+		cutSpeed = 0.5
+
+		PARACHUTE
+		{
+			parachuteName = canopy
+			invertCanopy = true
+			capName = cap
+			preDeploymentAnimation = semiDeploy
+			deploymentAnimation = fullyDeploy
+			material = Nylon
+			minIsPressure = False
+			minPressure = 0.01
+			preDeployedDiameter = 2.7
+			preDeploymentSpeed = 6.0
+			minDeployment = 3660
+			deployedDiameter = 53.4
+			deploymentSpeed = 10.0
+			deploymentAlt = 3350
+			cutAlt = 0
+		}
+	}
+	
 	MODULE
 	{
 		name = ModuleDragModifier
@@ -78,53 +107,8 @@ PART
 		dragCubeName = SEMIDEPLOYED
 		dragModifier = 15
 	}
-}
-
-//	==================================================
-//	CST-100 parachute pack.
-
-//	Real Chute compatibility.
-//	==================================================
-
-@PART[CSTParachute]:FOR[RealismOverhaul]:NEEDS[RealChute]
-{
-	!sound_parachute_open = NULL
-
-	@category = none
-
-	!MODULE[ModuleParachute],*{}
-
-	!MODULE[RealChute*],*{}
-
-	MODULE
-	{
-		name = RealChuteModule
-		caseMass = 0.133
-		timer = 0
-		mustGoDown = True
-		spareChutes = 0
-		cutSpeed = 0.5
-		secondaryChute = False
-
-		PARACHUTE
-		{
-			material = Nylon
-			preDeployedDiameter = 2.7
-			deployedDiameter = 53.4
-			minIsPressure = False
-			minDeployment = 3200
-			deploymentAlt = 1200
-			cutAlt = -1
-			preDeploymentSpeed = 2.5
-			deploymentSpeed = 5.0
-			preDeploymentAnimation = semiDeploy
-			deploymentAnimation = fullyDeploy
-			parachuteName = canopy
-			capName = cap
-		}
-	}
-
-	EFFECTS
+	
+		EFFECTS
 	{
 		rcpredeploy
 		{
@@ -166,4 +150,18 @@ PART
 			}
 		}
 	}
+}
+
+@PART[ROC-CSTParachute]:AFTER[zzzRealismOverhaul]
+{
+	// RO forces all RealChuteModules to minDeploy 5000, deploy 1000,
+	// Get back our historical numbers
+	@MODULE[RealChuteModule]
+	{
+		@PARACHUTE
+		{
+			@minDeployment = 3660
+			@deploymentAlt = 3350
+		}
+	}	 
 }
