--- a/GameData/ROCapsules/PartConfigs/CST/CSTSM.cfg
+++ b/GameData/ROCapsules/PartConfigs/CST/CSTSM.cfg
@@ -87,7 +87,7 @@ PART
 	
 	MODULE
 	{
-		name = ModuleRCS
+		name = ModuleRCSFX
 		thrusterTransformName = RCS
 		thrusterPower = 0.44
 		resourceFlowMode = STAGE_PRIORITY_FLOW
