--- a/GameData/ROCapsules/PartConfigs/CST/CSTCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/CST/CSTCM.cfg
@@ -147,7 +147,7 @@ PART
 	
 	MODULE
 	{
-		name = ModuleRCS
+		name = ModuleRCSFX
 		thrusterTransformName = RCS
 		thrusterPower = 0.445
 		resourceFlowMode = STAGE_PRIORITY_FLOW
