--- a/GameData/ROCapsules/PartConfigs/Gemini/AgenaPort.cfg
+++ b/GameData/ROCapsules/PartConfigs/Gemini/AgenaPort.cfg
@@ -14,6 +14,21 @@ PART
 	}
 	rescaleFactor = 1.6
 	scale = 1.0
+	
+	NODE
+	{
+		transform = Nose_Node1
+		name = Nose_1
+		size = 0
+		method = FIXED_JOINT
+	}
+	NODE
+	{
+		transform = Nose_Node2
+		name = Nose_2
+		size = 0
+		method = FIXED_JOINT
+	}
 
 	// --- node definitions ---
 	// definition format is Position X, Position Y, Position Z, Up X, Up Y, Up Z, size
